# generic-deepseq

./: LICENSE  generic-deepseq.cabal
Control/: DeepSeq.hs
Control/DeepSeq/: Internal.hs
bench/: Benchmark.hs  deepseq-bench.cabal
src/Control/: DeepSeq.hs
